# clean-and-green-philly

./: .all-contributorsrc  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .releaserc  2023_01_30_layer_script_pep_8.ipynb  2023_02_02_vacant_lots_layer.html  2023_02_02_vacant_lots_layer.ipynb  2023_02_10_dash-draft.ipynb  2023_02_22_pz_lots_data.ipynb  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  DATASETS.md  LICENSE  Pipfile  README.md  SETUP.md  code_of_conduct.md  constants.py  dashboard_draft.py  data_utils.py  eslint.config.js  json_quickmap.R  layer_script.py  lot_class_algorithm.ipynb  map-layer  map-layer-draft-2.py  next.config.js  notes.md  package-lock.json  package.json  process_data.py  requirements.txt  sample_joined_gdf.ipynb  script.py  sonar-project.properties  tailwind.config.ts  (+3 more)
data/: .env.example  .gitattributes  Dockerfile  Dockerfile-fetch-data  Dockerfile-pg  Dockerfile-timescale  Pipfile  analyze_contig_neighbors.py  analyze_delinquencies.py  bootstrap.py  docker-compose.yml  init_pg.sql  init_pg_timescale.sql  pyproject.toml  test_service.py
data/backup_data/: README.md  all_properties_2025_07_09.parquet  buildings_backup_2024_06_24.parquet  land_backup_2024_06_24.parquet  vacant_properties_2025_07_09.pmtiles
data/notebooks/: gpu_rasterized_zonal_stats.ipynb  ndvi_trends.ipynb
data/src/: Pipfile  analyze_dev_probability.py  fetch_and_save_data.py  loaders.py  main.py  script.py  streetview.py  utilities.py
data/src/awkde/: README.md  setup.py
data/src/classes/: backup_archive_database.py  data_diff.py  diff_report.py  featurelayer.py  file_manager.py  loaders.py  (+2 more)
data/test/: cl-data-diff.sh  test_diff_backup.py  test_metadata_utils.py  test_slack_error_reporter.py  test_utils.py
(+5712 files in other folders)
